--- a/pre-eval/DataLattice/config
+++ b/pre-eval/DataLattice/config
@@ -1,10 +1,14 @@
-txtPath=real.txt
-output=Result/
-startTime=20200710000000
-endTime=20200711000000
+output=TrueNc/
+startTime=2020_07_10_00_00_00
+endTime=2020_07_11_23_00_00
 lonBegin=100
 lonEnd=130
 latBegin=24
 latEnd=30
-timeGap=1
+timeGap=3
 TruthFileDir=TruthFileDir/
+outputFileDir=TrueNc/
+lonGap=1
+latGap=1
+np=1
+nc=1
