--- a/pre-eval/evaluation_eqdis/config
+++ b/pre-eval/evaluation_eqdis/config
@@ -9,4 +9,4 @@ PreDuration=720
 PreTimeLimit=0/720,0/360,360/720
 NeighborhoodRange=0,1,2,3,4,5,6,7,8,9,111,12,13,14,15
 EvaluationMethod=N1,N2,N3,N4,POD,BIAS,FAR,FOM,TS,ETS,PC,FSS
-groundFile=
+groundFile=test
