--- a/pre-eval/evaluation1.1-need-wjh/GroundToNpy/config
+++ b/pre-eval/evaluation1.1-need-wjh/GroundToNpy/config
@@ -1,13 +1,16 @@
-startTime=2015_05_17_00_00_00
-endTime=2015_05_18_00_00_00
-lonBegin=100
-lonEnd=130
-latBegin=24
-latEnd=30
-timeGap=3
+startTime=2020_05_21_03_00_00
+endTime=2020_05_21_04_00_00
+lonBegin=112.1876
+lonEnd=120.2276
+latBegin=36.9753
+latEnd=42.9353
+timeGap=1
 TruthFileDir=TruthFileDir/
 output=npy/
-lonGap=1
-latGap=1
+lon_lat_Gap=0.04
 edg=1
 Threshold=2
+npy=1
+nc=1
+saveImage=1
+equal_dis=0
