--- a/pre-eval/evaluation1.1-need-wjh/config
+++ b/pre-eval/evaluation1.1-need-wjh/config
@@ -1,10 +1,14 @@
-FilePath=D:\AI短时预报产品\评估结果\GD\
-GroundFilePath=s
-StartTime=202105261000
-EndTime=202110290000
+type=1
+TrueFileGrid=/home/wenjiahua/windows_project/pre-eval/evaluation1.1-need-wjh/input_examples/obs
+NeedObs=1
+preFile=/home/wenjiahua/windows_project/pre-eval/evaluation1.1-need-wjh/DataLattice/TrueNc
+GroundFilePath=/home/wenjiahua/windows_project/pre-eval/evaluation1.1-need-wjh/GroundToNpy/npy
+NeedGround=1
+StartTime=202005210100
+EndTime=202005212300
 Threshold=0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9
 TimeStep=60
 PreDuration=720
-PreTimeLimit=0/60,0/180,180/360,360/540,540/720,0/360,360/720,0/720
+PreTimeLimit=0/60,0/180
 NeighborhoodRange=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
 EvaluationMethod=N1,N2,N3,N4,POD,BIAS,FAR,FOM,TS,ETS,PC,FSS
